<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AttackSim</string>
    <string name="action_settings">Settings</string>
    <string name="display">Welcome</string>
    <string name="root">Root</string>
    <string name="unroot">Unroot</string>
    <string name="root_op">Root Operation</string>
    <string name="hook_open">Change Syscall</string>
    <string name="context_manager_button">Become the Context Manager</string>

    <string-array name="syscalls">
        <item>Read</item>
        <item>Write</item>
        <item>Open</item>
        <item>Close</item>
        <item>Ioctl</item>
    </string-array>
    
</resources>
