<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AttackSim" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display" />

    <Button
        android:id="@+id/root_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginRight="18dp"
        android:text="@string/root" />

     <Button
         android:id="@+id/unroot_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/root_button"
         android:layout_below="@+id/root_button"
         android:layout_marginTop="17dp"
         android:text="@string/unroot" />

     <Button
         android:id="@+id/root_op_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/unroot_button"
         android:layout_below="@+id/unroot_button"
         android:layout_marginTop="34dp"
         android:text="@string/root_op" />

     <Button
         android:id="@+id/hook_syscall_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/root_op_button"
         android:layout_alignRight="@+id/root_op_button"
         android:layout_below="@+id/root_op_button"
         android:layout_marginTop="32dp"
         android:text="@string/hook_open" />

     <Spinner
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/hook_syscall_button"
         android:layout_alignRight="@+id/hook_syscall_button"
         android:layout_below="@+id/hook_syscall_button" />

     <Button
         android:id="@+id/context_manager_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/spinner"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/spinner"
         android:layout_below="@+id/spinner"
         android:text="@string/context_manager_button" />

</RelativeLayout>